--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,7 +21,7 @@ collections:
     files:
       - label: "Landing Page"
         name: "landing"
-        file: "context/_index.md"
+        file: "content/_index.md"
         fields:
           - {label: Titolo, name: titolo, widget: string}
           - {label: Sottotitolo, name: sottotitolo, widget: string}
