--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -25,3 +25,4 @@ collections:
         fields:
           - {label: Titolo, name: titolo, widget: string}
           - {label: Sottotitolo, name: sottotitolo, widget: string}
+          - {label: Logo, name: logo, widget: image}
