--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -26,3 +26,15 @@ collections:
           - {label: Titolo, name: titolo, widget: string}
           - {label: Sottotitolo, name: sottotitolo, widget: string}
           - {label: Logo, name: logo, widget: image}
+          - label: "sezioni"
+            name: "sections"
+            widget: "list"
+            fields: 
+              - {label: Titolo, name: titolo, widget: string}
+              - {label: Descrizione, name: descrizione, widget: string }
+      - label: "Format"
+        name: "format"
+        file: "content/format/_index.md"
+        fields:
+          - {label: Titolo, name: titolo, widget: string}
+          - {label: Contenuto, name: body, widget: string}
