--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -26,7 +26,7 @@ collections:
           - {label: Titolo, name: titolo, widget: string}
           - {label: Sottotitolo, name: sottotitolo, widget: string}
           - label: "sezioni"
-            name: "sections"
+            name: "sezioni"
             widget: "list"
             fields: 
               - {label: Titolo, name: titolo, widget: string}
